cupt (1.5.14) UNRELEASED; urgency=low

  * doc:
    - cupt_vs_apt:
      - Documented not handling the difference between 'specific' and
        'general' APT pin types. (Closes: #586347)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 07 Jul 2010 10:09:36 +0300

cupt (1.5.13) unstable; urgency=low

  * Cupt:
    - Cache:
      - Reading APT preferences: handle multiple package names, separated by
        spaces, correctly. Thanks to Julian Andres Klode for the report.
        (Closes: #585017)
    - System:
      - Worker:
        - Fixed passing version comparison result for pre-install hooks of
          version 2 in case of removals, re-installs and downgrades.
        - In case of circular actions error, suggest to add failed packages
          to 'cupt::worker::allow-indirect-upgrade' option.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 14 Jun 2010 21:45:29 +0300

cupt (1.5.12) unstable; urgency=low

  * Cupt:
    - System:
      - Worker:
        - Ignore Replaces when building new dependency edge because of
          Conlifcts. Dpkg purposedly violates the §7.6.2 of Debian policy.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 23 May 2010 16:43:41 +0300

cupt (1.5.11) unstable; urgency=low

  * Cupt:
    - Cache:
      - Parsing preferences: silently ignore files in preferences directory
        that don't conform to apt_preferences(5). Thanks to Eduard Bloch.
        (Closes: #578681)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 02 May 2010 19:57:11 +0300

cupt (1.5.10) unstable; urgency=low

  * cupt
    - 'why': if received only one argument, assume --installed-only.
      Thanks to James Vega for spotting. (Closes: #577646)
    - 'show': add '(on hold)' to the 'Status' line if the package is on hold.
  * Cupt:
    - Download:
      - Manager:
        - Use ITIMER_VIRTUAL instead of ITIMER_REAL for ping signals.
        - Use dedicated pipe in ping signal handler. I believe, it
          Closes: #554620. Many thanks to James Vega.